--- a/nanjingsubwaymaven/pom.xml
+++ b/nanjingsubwaymaven/pom.xml
@@ -155,8 +155,21 @@
 	
 	
   </dependencies>
-	
+
+
+
   <build>
     <finalName>nanjingsubwaymaven</finalName>
+	  <!--配置Maven 对resource文件 过滤 -->
+	  <resources>
+		  <resource>
+			  <directory>src/main/java</directory>
+			  <includes>
+				  <include>**/*.properties</include>
+				  <include>**/*.xml</include>
+			  </includes>
+			  <filtering>true</filtering>
+		  </resource>
+	  </resources>
   </build>
 </project>
