--- a/nanjingsubwaymaven/pom.xml
+++ b/nanjingsubwaymaven/pom.xml
@@ -170,6 +170,14 @@
 			  </includes>
 			  <filtering>true</filtering>
 		  </resource>
+		  <resource>
+			  <directory>src/main/resources</directory>
+			  <includes>
+				  <include>**/*.properties</include>
+				  <include>**/*.xml</include>
+			  </includes>
+			  <filtering>true</filtering>
+		  </resource>
 	  </resources>
   </build>
 </project>
